--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,13 @@ exclude       = [
 
 [dependencies]
 log   = "0.3.1"
-nix   = "0.3.2"
+#nix   = "0.3.2"
 time  = "0.1.23"
 bytes = "0.2.4"
+
+[dependencies.nix]
+git = "https://github.com/fhartwig/nix-rust.git"
+branch = "rustup"
 
 [dev-dependencies]
 env_logger = "0.3.0"
