--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,14 @@ exclude       = [
 log   = "0.3.1"
 #nix   = "0.3.2"
 time  = "0.1.23"
-bytes = "0.2.4"
+#bytes = "0.2.4"
 
 [dependencies.nix]
 git = "https://github.com/fhartwig/nix-rust.git"
 branch = "rustup"
+
+[dependencies.bytes]
+git = "https://github.com/carllerche/bytes"
 
 [dev-dependencies]
 env_logger = "0.3.0"
